--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
-target-version = ['py37']
+target-version = ['py311']
 preview = true
 
 [tool.mypy]
+ignore_missing_imports = "True"
 files = ["conductor_celery"]
-disallow_untyped_defs = "True"
-disallow_any_unimported = "True"
+disallow_untyped_defs = "False"
+disallow_any_unimported = "False"
 no_implicit_optional = "True"
 check_untyped_defs = "True"
 warn_return_any = "True"
@@ -48,7 +49,7 @@ warn_unused_ignores = "True"
 show_error_codes = "True"
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py311"
 line-length = 120
 fix = true
 select = [
@@ -101,3 +102,9 @@ branch = true
 source = ["conductor_celery"]
 
 
+[tool.deptry]
+
+extend_exclude = [
+    ".venv",
+    ".tox"
+]
