--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pre-commit = "^2.20.0"
 tox = "^3.25.1"
 redis = "^4.6.0"
 pytest-celery = "^0.0.0"
-httpretty = "^1.1.4"
+pytest-responses = "^0.5.1"
 
 
 
