--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 celery = "^5.3.1"
-conductor-python = "^1.0.71"
+conductor-python = "1.0.71"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
